xaw3dincludedir=${includedir}/X11/Xaw3dxft

if XAW_INTERNATIONALIZATION
I18N_HDRS = \
       X11/Xaw3dxft/MultiSrc.h \
       X11/Xaw3dxft/MultiSrcP.h \
       X11/Xaw3dxft/MultiSink.h \
       X11/Xaw3dxft/MultiSinkP.h \
       X11/Xaw3dxft/VendorEP.h \
       X11/Xaw3dxft/XawImP.h
endif

xaw3dinclude_HEADERS = \
	X11/Xaw3dxft/AllWidgets.h \
	X11/Xaw3dxft/AsciiSink.h \
	X11/Xaw3dxft/AsciiSinkP.h \
	X11/Xaw3dxft/AsciiSrc.h \
	X11/Xaw3dxft/AsciiSrcP.h \
	X11/Xaw3dxft/AsciiText.h \
	X11/Xaw3dxft/AsciiTextP.h \
	X11/Xaw3dxft/Box.h \
	X11/Xaw3dxft/BoxP.h \
	X11/Xaw3dxft/Cardinals.h \
	X11/Xaw3dxft/Command.h \
	X11/Xaw3dxft/CommandP.h \
	X11/Xaw3dxft/Dialog.h \
	X11/Xaw3dxft/DialogP.h \
	X11/Xaw3dxft/Form.h \
	X11/Xaw3dxft/FormP.h \
	X11/Xaw3dxft/Grip.h \
	X11/Xaw3dxft/GripP.h \
	X11/Xaw3dxft/Label.h \
	X11/Xaw3dxft/LabelP.h \
	X11/Xaw3dxft/Layout.h \
	X11/Xaw3dxft/LayoutP.h \
	X11/Xaw3dxft/List.h \
	X11/Xaw3dxft/ListP.h \
	X11/Xaw3dxft/MenuButton.h \
	X11/Xaw3dxft/MenuButtoP.h \
	X11/Xaw3dxft/Paned.h \
	X11/Xaw3dxft/PanedP.h \
	X11/Xaw3dxft/Panner.h \
	X11/Xaw3dxft/PannerP.h \
	X11/Xaw3dxft/Porthole.h \
	X11/Xaw3dxft/PortholeP.h \
	X11/Xaw3dxft/Repeater.h \
	X11/Xaw3dxft/RepeaterP.h \
	X11/Xaw3dxft/Reports.h \
	X11/Xaw3dxft/Scrollbar.h \
	X11/Xaw3dxft/ScrollbarP.h \
	X11/Xaw3dxft/Simple.h \
	X11/Xaw3dxft/SimpleMenP.h \
	X11/Xaw3dxft/SimpleMenu.h \
	X11/Xaw3dxft/SimpleP.h \
	X11/Xaw3dxft/SmeBSB.h \
	X11/Xaw3dxft/SmeBSBP.h \
	X11/Xaw3dxft/Sme.h \
	X11/Xaw3dxft/SmeLine.h \
	X11/Xaw3dxft/SmeLineP.h \
	X11/Xaw3dxft/SmeP.h \
	X11/Xaw3dxft/SmeThreeD.h \
	X11/Xaw3dxft/SmeThreeDP.h \
	X11/Xaw3dxft/StripCharP.h \
	X11/Xaw3dxft/StripChart.h \
	X11/Xaw3dxft/Text.h \
	X11/Xaw3dxft/TextP.h \
	X11/Xaw3dxft/TextSink.h \
	X11/Xaw3dxft/TextSinkP.h \
	X11/Xaw3dxft/TextSrc.h \
	X11/Xaw3dxft/TextSrcP.h \
	X11/Xaw3dxft/ThreeD.h \
	X11/Xaw3dxft/ThreeDP.h \
	X11/Xaw3dxft/Tip.h \
	X11/Xaw3dxft/TipP.h \
	X11/Xaw3dxft/Toggle.h \
	X11/Xaw3dxft/ToggleP.h \
	X11/Xaw3dxft/Tree.h \
	X11/Xaw3dxft/TreeP.h \
	X11/Xaw3dxft/Viewport.h \
	X11/Xaw3dxft/ViewportP.h \
	X11/Xaw3dxft/Xaw3dP.h \
	X11/Xaw3dxft/Xaw3dXft.h \
	X11/Xaw3dxft/XawInit.h \
	$(I18N_HDRS)

EXTRA_DIST = \
	X11/Xaw3dxft/Template.h \
	X11/Xaw3dxft/TemplateP.h